2004-01-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/Makefile (CFLAGS-getpid.c): Removed.
	(CFLAGS-getpid.o): Defined.
	(CFLAGS-getpid.os): Defined.

2003-12-31  Ulrich Drepper  <drepper@redhat.com>

	* pthread_getattr_np.c (pthread_getattr_np): Make sure stack info
	returned for main thread does not overlap with any other VMA.
	Patch by Jakub Jelinek.

2003-12-29  Jakub Jelinek  <jakub@redhat.com>

	* tst-raise1.c: Include stdio.h.

2003-12-23  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/raise.c (raise): Protect pid = selftid
	setting with __ASSUME_TGKILL || defined __NR_tgkill.
	If pid is 0, set it to selftid.
	* sysdeps/unix/sysv/linux/getpid.c (really_getpid): Make inline.
	Don't set self->pid but self->tid.  If self->pid == 0 and self->tid
	!= 0, return self->tid without doing a syscall.
	* descr.h (struct pthread): Move pid field after tid.

	* Makefile (tests): Add tst-raise1.
	* tst-raise1.c: New file.

2003-12-23  Roland McGrath  <roland@redhat.com>

	* tst-oddstacklimit.c: New file.
	* Makefile (tests): Add it.
	(tst-oddstacklimit-ENV): New variable.

	* init.c (__pthread_initialize_minimal_internal): Round stack rlimit
	value up to page size for __default_stacksize.

2003-12-21  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-eintr5.
	* tst-eintr5.c: New file.

	* eintr.c (eintr_source): Prevent sending signal to self.

	* tst-eintr2.c (tf1): Improve error message.

2003-12-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/Makefile (CFLAGS-getpid.c): Define.
	* sysdeps/unix/sysv/linux/getpid.c: New file.
	* pthread_cancel.c: Add comment explaining use of PID field.
	* sysdeps/unix/sysv/linux/pthread_kill.c: Likewise.
	* pthread_getattr_np.c: Use abs() when comparing PID and TID fields.
	* sysdeps/unix/sysv/linux/fork.c: Negate PID field of parent
	temporarily to signal the field must not be relied on and updated
	by getpid().